doc: 完成 联合类型和交叉类型(Unions and Intersection Types) 文档

--- a/handbook_reference/高级类型.md
+++ b/handbook_reference/高级类型.md
@@ -145,4 +145,110 @@ if (padder instanceof StringPadder) {
   padder;
 }
 ```
-`instanceof` 操作符的右边要求是一个构造函数，TypeScript
+`instanceof` 操作符的右边要求是一个构造函数，TypeScript会将值的类型限制为：
+1. 构造函数的原型(`prototype`)的类型
+2. 上述类型的构造签名的并集
+
+## 空类型
+TypeScript 有两种特殊的类型：`null` 和 `undefined`。默认情况下，类型检查器认为 `null` 和 `undefined` 可以赋给任意类型，但 `--strictNullChecks` 可以组织这个默认行为，除非显式使用联合类型：
+```ts
+let exampleString = "foo";
+exampleString = null;
+// error: Type 'null' is not assignable to type 'string'.
+
+let stringOrNull: string | null = "bar";
+stringOrNull = null;
+
+stringOrNull = undefined;
+// error: Type 'undefined' is not assignable to type 'string | null'.
+```
+
+### 可选参数和属性
+在 `--strictNullChecks` 选项下，可选参数会被自动加上 `|undefined` 类型：
+```ts
+function f(x: number, y?: number) {
+  return x + (y ?? 0);
+}
+
+f(1, 2);
+f(1);
+f(1, undefined);
+f(1, null); //error: Argument of type 'null' is not assignable to parameter of type 'number | undefined'.
+```
+可选属性也一样：
+```ts
+class C {
+  a: number;
+  b?: number;
+}
+
+let c = new C();
+
+c.a = 12;
+c.a = undefined;
+// error: Type 'undefined' is not assignable to type 'number'.
+c.b = 13;
+c.b = undefined;
+c.b = null;
+// error: Type 'null' is not assignable to type 'number | undefined'.
+```
+
+### 类型保证 和 断言后缀
+在使用包含空类型的联合类型时，有时需要使用**类型保证**来规避空类型的情况，比如：
+```ts
+function f(stringOrNull: string | null): string {
+  if (stringOrNull === null) {
+    return "default";
+  } else {
+    return stringOrNull;
+  }
+}
+```
+你也可以使用简短操作符（`??`）：
+```ts
+function f(stringOrNull: string | null): string {
+  return stringOrNull ?? "default";
+}
+```
+
+有时候编译器无法判断值的类型是 `null` 和 `undefined`，你可以使用类型断言后缀(`!`)来手动判断:
+```ts
+interface UserAccount {
+  id: number;
+  email?: string;
+}
+
+const user: UserAccount | undefined = getUser("admin");
+user.id;
+// error: Object is possibly 'undefined'.
+
+if (user) {
+  user.email.length;
+// error: Object is possibly 'undefined'.
+}
+
+// Instead if you are sure that these objects or fields exist, the
+// postfix ! lets you short circuit the nullability
+user!.email!.length;
+```
+
+## 类型别名
+类型别名为一个类型起一个新的名字，这有时和接口很像，但是它能够给基本类型、联合类型、元组或其他类型命名。
+```ts
+type Second = number;
+
+let timeInSecond: number = 10;
+let time: Second = 10;
+```
+实际上，类型别名并不会创建一个新类型，它只是目标类型的一个引用。与接口一样，类型别名也能使用泛型：
+```ts
+type Container<T> = { value: T };
+```
+甚至能嵌套使用别名，很酷不是吗？
+```ts
+type Tree<T> = {
+  value: T;
+  left?: Tree<T>;
+  right?: Tree<T>;
+};
+```
