--- a/handbook/基本类型.md
+++ b/handbook/基本类型.md
@@ -1,6 +1,22 @@
 # 基本类型
 为了使程序正常运行，需要引入一些最基本的数据类型：数字，字符串，结构体，布尔值等。TypeScript支持JavaScript中已有的基本数据类型，并额外添加了一个枚举类型。
 
+- [基本类型](#基本类型)
+  - [布尔型(boolean)](#布尔型boolean)
+  - [数值型(number)](#数值型number)
+  - [字符串(string)](#字符串string)
+  - [数组](#数组)
+  - [元组](#元组)
+  - [枚举](#枚举)
+  - [Unknown](#unknown)
+  - [any](#any)
+  - [void](#void)
+  - [null and undefined](#null-and-undefined)
+  - [never](#never)
+  - [object](#object)
+  - [类型断言](#类型断言)
+  - [关于Number, String, Boolean, Symbol and Object](#关于number-string-boolean-symbol-and-object)
+
 #
 ## 布尔型(boolean)
 布尔类型是是简单的数据类型，要么是``true``或者``false``。
