--- a/handbook_reference/高级类型.md
+++ b/handbook_reference/高级类型.md
@@ -1,6 +1,19 @@
 # 高级类型
 本章介绍了一些构造类型的高级方法，这些方法可以与**工具类型**一起使用
 
+- [高级类型](#高级类型)
+  - [类型保证 和 类型区分](#类型保证-和-类型区分)
+  - [自定义类型保证](#自定义类型保证)
+    - [使用类型判定](#使用类型判定)
+    - [使用 ```in``` 操作符](#使用-in-操作符)
+  - [`typeof` 类型保证](#typeof-类型保证)
+  - [`instanceof` 类型保证](#instanceof-类型保证)
+  - [空类型](#空类型)
+    - [可选参数和属性](#可选参数和属性)
+    - [类型保证 和 断言后缀](#类型保证-和-断言后缀)
+  - [类型别名](#类型别名)
+  - [接口 vs 类型别名](#接口-vs-类型别名)
+
 ## 类型保证 和 类型区分
 联合类型(Union Types)常用于某个值可能是多种类型的情况。但是如果想确切知道到底这个值是哪一种类型时，需要怎么做呢？在JavaScript中，通常使用运行时代码去判断这个值是否存在，或者说满足某种类型所对应的特定条件。
 ```ts
@@ -244,7 +257,7 @@ let time: Second = 10;
 ```ts
 type Container<T> = { value: T };
 ```
-甚至能嵌套使用别名，很酷不是吗？
+别名也能嵌套使用：
 ```ts
 type Tree<T> = {
   value: T;
@@ -252,3 +265,22 @@ type Tree<T> = {
   right?: Tree<T>;
 };
 ```
+甚至能和`交叉类型`一起使用，很酷不是吗？
+```ts
+type LinkedList<Type> = Type & { next: LinkedList<Type> };
+
+interface Person {
+  name: string;
+}
+
+let people: LinkedList<Person> = getDriversLicenseQueue();
+people.name;
+people.next.name;
+people.next.next.name;
+people.next.next.next.name;
+```
+
+## 接口 vs 类型别名
+
+类型别名的功能类似于接口，但是又有点不同。接口的所有特性几乎都能在类型别名中找到，它们关键的不同在于：类型别名无法多次添加额外属性，而接口却可以多次拓展。
+
