doc: 完成 高级类型/this 多态类型

--- a/handbook_reference/高级类型.md
+++ b/handbook_reference/高级类型.md
@@ -13,6 +13,9 @@
     - [类型保证 和 断言后缀](#类型保证-和-断言后缀)
   - [类型别名](#类型别名)
   - [接口 vs 类型别名](#接口-vs-类型别名)
+  - [枚举成员类型](#枚举成员类型)
+  - [多态的 *`this`* 类型](#多态的-this-类型)
+  - [索引类型](#索引类型)
 
 ## 类型保证 和 类型区分
 联合类型(Union Types)常用于某个值可能是多种类型的情况。但是如果想确切知道到底这个值是哪一种类型时，需要怎么做呢？在JavaScript中，通常使用运行时代码去判断这个值是否存在，或者说满足某种类型所对应的特定条件。
@@ -284,3 +287,108 @@ people.next.next.next.name;
 
 类型别名的功能类似于接口，但是又有点不同。接口的所有特性几乎都能在类型别名中找到，它们关键的不同在于：类型别名无法多次添加额外属性，而接口却可以多次拓展。
 
+`interface`可以给已有的接口添加属性：
+```ts
+interface Window {
+  title: string
+}
+
+interface Window {
+  ts: import("typescript")
+}
+
+const src = 'const a = "Hello World"';
+window.ts.transpileModule(src, {});
+```
+但类型别名一旦声明就无法修改：
+```ts
+type Window = {
+  title: string
+}
+
+type Window = {
+  ts: import("typescript")
+}
+
+// Error: Duplicate identifier 'Window'.
+```
+由于 `接口` 更接近于JavaScript中[对象的运行方式](https://wikipedia.org/wiki/Open/closed_principle)，我们推荐尽可能的使用接口而不是类型别名。
+另一方面，如果你遇到使用接口无法构造的类型，那么可以转而结合使用联合类型或者元组等工具，用类型别名来实现。
+
+## 枚举成员类型
+正如 [枚举](../handbook/基本类型.md#枚举) 中所述，枚举成员都有一个初始字面量。
+
+## 多态的 *`this`* 类型
+
+*`this`* 的多态性表现为 *`this`* 的类型可以在父类和子类之间切换，如同我们熟知的 [流式接口](https://en.wikipedia.org/wiki/Fluent_interface)，通过继承来提升代码表达能力：
+```ts
+class BasicCalculator {
+  public constructor(protected value: number = 0) {}
+  public currentValue(): number {
+    return this.value;
+  }
+  public add(operand: number): this {
+    this.value += operand;
+    return this;
+  }
+  public multiply(operand: number): this {
+    this.value *= operand;
+    return this;
+  }
+  // ... other operations go here ...
+}
+
+let v = new BasicCalculator(2).multiply(5).add(1).currentValue();
+```
+因为使用了 *`this`* 类型，于是你能够拓展父类的方法，而不用担心 *`this`* 的类型问题。
+```ts
+class ScientificCalculator extends BasicCalculator {
+  public constructor(value = 0) {
+    super(value);
+  }
+  public sin() {
+    this.value = Math.sin(this.value);
+    return this;
+  }
+  // ... other operations go here ...
+}
+
+let v = new ScientificCalculator(2).multiply(5).sin().add(1).currentValue();
+```
+
+要是没有如此多变的 *`this`* 类型，调用 `multiply(5)` 之后返回的就是`BasicCalculator` 的父类型，要知道父类型是没有 `sin` 方法的，多亏了 *`this`* 类型，他会沿着继承链找到可用的方法。
+
+## 索引类型
+
+有了索引类型，编译器就可以利用动态的属性名来检查代码了。回想在JavaScript中我们是怎么动态遍历对象的成员的：
+```ts
+function pluck(o, propertyNames) {
+  return propertyNames.map((n) => o[n]);
+}
+```
+而在TypeScript中，我们使用 **索引类型查询**（**index type query**）和 **索引访问操作符**：
+```ts
+function pluck<T, K extends keyof T>(o: T, propertyNames: K[]): T[K][] {
+  return propertyNames.map((n) => o[n]);
+}
+
+interface Car {
+  manufacturer: string;
+  model: string;
+  year: number;
+}
+
+let taxi: Car = {
+  manufacturer: "Toyota",
+  model: "Camry",
+  year: 2014,
+};
+
+// Manufacturer and model are both of type string,
+// so we can pluck them both into a typed string array
+let makeAndModel: string[] = pluck(taxi, ["manufacturer", "model"]);
+
+// If we try to pluck model and year, we get an
+// array of a union type: (string | number)[]
+let modelYear = pluck(taxi, ["model", "year"]);
+```
