doc: 完成 高级类型

--- a/handbook/联合类型和交叉类型.md
+++ b/handbook/联合类型和交叉类型.md
@@ -1,5 +1,5 @@
 # 联合类型和交叉类型
-至今为止，本手册仅涉及到不可分（Atomic）的类型，这时开发者也许会试图寻找将多个已有的类型进行结合或者合成，从而形成新类型的工具。
+目前为止，本手册仅涉及到不可分（Atomic）的类型，这时开发者也许会试图寻找将多个已有的类型进行结合或者合成，从而形成新类型的工具。
 联合类型和交集类型就是这个方法之一。
 
 - [联合类型和交叉类型](#联合类型和交叉类型)
