--- a/handbook_reference/高级类型.md
+++ b/handbook_reference/高级类型.md
@@ -16,6 +16,13 @@
   - [枚举成员类型](#枚举成员类型)
   - [多态的 *`this`* 类型](#多态的-this-类型)
   - [索引类型](#索引类型)
+  - [索引签名](#索引签名)
+  - [类型映射](#类型映射)
+  - [类型映射的类型推断](#类型映射的类型推断)
+  - [条件类型](#条件类型)
+  - [分发条件类型](#分发条件类型)
+  - [条件类型的类型推断](#条件类型的类型推断)
+  - [预置的条件类型](#预置的条件类型)
 
 ## 类型保证 和 类型区分
 联合类型(Union Types)常用于某个值可能是多种类型的情况。但是如果想确切知道到底这个值是哪一种类型时，需要怎么做呢？在JavaScript中，通常使用运行时代码去判断这个值是否存在，或者说满足某种类型所对应的特定条件。
@@ -366,7 +373,7 @@ function pluck(o, propertyNames) {
   return propertyNames.map((n) => o[n]);
 }
 ```
-而在TypeScript中，我们使用 **索引类型查询**（**index type query**）和 **索引访问操作符**：
+而在TypeScript中，我们使用 **类型索引查询**（**index type query**）和 **类型索引**：
 ```ts
 function pluck<T, K extends keyof T>(o: T, propertyNames: K[]): T[K][] {
   return propertyNames.map((n) => o[n]);
@@ -384,11 +391,458 @@ let taxi: Car = {
   year: 2014,
 };
 
-// Manufacturer and model are both of type string,
-// so we can pluck them both into a typed string array
+// 编译器会检查字段 Manufacturer，model 是否是 taxi 的属性索引，并且
+// pluck 的返回类型也会通过索引属性的类型进行推断，你看，这里是 string[]
 let makeAndModel: string[] = pluck(taxi, ["manufacturer", "model"]);
 
-// If we try to pluck model and year, we get an
-// array of a union type: (string | number)[]
+// 这里编译器推导出 pluck 的返回类型是 (string | number)[]
 let modelYear = pluck(taxi, ["model", "year"]);
+
+// 错误, 索引名 "unknown" 不在联合类型 "manufacturer" | "model" | "year" 之中
+pluck(taxi, ["year", "unknown"]);
 ```
+上面的例子介绍了一组新的类型操作符，第一个是 `keyof T` ，即 **索引类型查询**。对于任何类型 `T`，`keyof T` 返回的类型是 `T` 的已知的、public的属性名构成的联合类型：
+```ts
+let carProps: keyof Car;
+//         ^ = let carProps: "manufacturer" | "model" | "year"
+```
+第二个是 `T[K]` 操作符，这个叫 **类型索引**。我们可以看到，这里的类型的用法，跟表达式的用法一样。比如在上面的例子中，`taxi["manufacturer"]` 的类型是 `Car["manufacturer"]` ，即 `string`。下面是个更简单的例子：
+```ts
+function getProperty<T, K extends keyof T>(o: T, propertyName: K): T[K] {
+  return o[propertyName]; // o[propertyName] is of type T[K]
+}
+```
+在 `getProperty` 中，我们看到 `o: T` ，`propertyName: K`，这表明
+`o[propertyName]: T[K]`，编译器会从代码中推导出 `T[K]` 实际的类型，换句话说，编译器知道根据你代码中传入的类型 `T` 来检查 `K` 和 返回类型 `T[K]` ：
+```ts
+let manufacturer: string = getProperty(taxi, "manufacturer");
+let year: number = getProperty(taxi, "year");
+
+let unknown = getProperty(taxi, "unknown"); //error: Argument of type '"unknown"' is not assignable to parameter of type '"manufacturer" | "model" | "year"'.
+```
+
+## 索引签名
+`keyof` 和 `T[K]` 都在与索引签名打交道，索引签名的类型必须为 `string` 和 `number`。比如你又一个索引签名类型为 `string` 的类型，那么 `keyof` 的结果就是 `string | number` （为什么不是仅为 `string` 呢，因为在 JavaScript 中，你既可以用 `string`，也可以用 `number` 来索引对象的属性。）
+而类型索引 `T[string]` 返回的是索引签名的类型：
+```ts
+interface Dictionary<T> {
+  [key: string]: T;
+}
+let keys: keyof Dictionary<number>;
+//     ^ = let keys: string | number
+let value: Dictionary<number>["foo"];
+//      ^ = let value: number
+```
+如果索引签名的类型是 `number`，那么 `keyof` 返回的类型仅为 `number` ：
+```ts
+interface Dictionary<T> {
+  [key: number]: T;
+}
+
+let keys: keyof Dictionary<number>;
+//     ^ = let keys: number
+let numberValue: Dictionary<number>[42];
+//     ^ = let numberValue: number
+let value: Dictionary<number>["foo"];
+// error: Property 'foo' does not exist on type 'Dictionary<number>'.
+```
+
+## 类型映射
+
+如果想基于已有的类型 `Person`，将其的属性变为可选属性，我们需要像下面这样声明一个类型：
+```ts
+interface PersonSubset {
+  name?: string;
+  age?: number;
+}
+```
+或者一个只读的版本：
+```ts
+interface PersonReadonly {
+  readonly name: string;
+  readonly age: number;
+}
+```
+手写每个属性感觉很繁琐不是吗？，所以类型映射可以协助你：
+```ts
+type Partial<T> = {
+  [P in keyof T]?: T[P];
+};
+
+type Readonly<T> = {
+  readonly [P in keyof T]: T[P];
+};
+```
+
+我们这样使用上面给的工具：
+
+```ts
+type PersonPartial = Partial<Person>;
+//   ^ = type PersonPartial = {
+//       name?: string | undefined;
+//       age?: number | undefined;
+//   }
+type ReadonlyPerson = Readonly<Person>;
+//   ^ = type ReadonlyPerson = {
+//       readonly name: string;
+//       readonly age: number;
+//   }
+```
+
+如果你想往类型映射返回的类型中添加新属性，你可以使用交叉类型：
+```ts
+// Use this:
+type PartialWithNewMember<T> = {
+  [P in keyof T]?: T[P];
+} & { newMember: boolean }
+
+// This is an error!
+type WrongPartialWithNewMember<T> = {
+  [P in keyof T]?: T[P];
+  newMember: boolean;
+}
+```
+让我们来看看一个最简单的类型映射：
+```ts
+type Keys = "option1" | "option2";
+type Flags = { [K in Keys]: boolean };
+```
+上面的语法类似于 `for in` ，其中包括三个部分：
+1. 类型 `K`
+2. 联合类型 `Keys`
+3. 属性类型 `boolean`
+
+上面的 `Keys` 是硬编码，等同于下面的声明：
+```ts
+type Flags = {
+  option1: boolean;
+  option2: boolean;
+};
+```
+
+实际应用中，就像上面的 `Partial<T>` 和 `Readonly<T>` ，我们会对已有类型的属性进行处理，这会儿就要用到 `keyof` ：
+```ts
+type NullablePerson = { [P in keyof Person]: Person[P] | null };
+//   ^ = type NullablePerson = {
+//       name: string | null;
+//       age: number | null;
+//   }
+type PartialPerson = { [P in keyof Person]?: Person[P] };
+//   ^ = type PartialPerson = {
+//       name?: string | undefined;
+//       age?: number | undefined;
+//   }
+```
+上面这种类型映射的泛型版本为：
+```ts
+type Nullable<T> = { [P in keyof T]: T[P] | null };
+type Partial<T> = { [P in keyof T]?: T[P] };
+```
+下面列出了如何构造代理泛型：
+
+```ts
+type Proxy<T> = {
+  get(): T;
+  set(value: T): void;
+};
+
+type Proxify<T> = {
+  [P in keyof T]: Proxy<T[P]>;
+};
+
+function proxify<T>(o: T): Proxify<T> {
+  // ... wrap proxies ...
+}
+
+let props = { rooms: 4 };
+let proxyProps = proxify(props);
+//  ^ = let proxyProps: Proxify<{
+//      rooms: number;
+//  }>
+```
+鉴 于`Partial<T>` 和 `Readonly<T>` 的便利性，它们和下面的类型工具( `Pick` 和 `Record` )已经被包含在TypeScript全局环境中：
+```ts
+type Pick<T, K extends keyof T> = {
+  [P in K]: T[P];
+};
+
+type Record<K extends keyof any, T> = {
+  [P in K]: T;
+};
+```
+`Partial`，`Readonly` 和 `Pick` 都是 **同态** 映射，而 `Record` 不是，因为 `Record` 的输出类型的属性并不是输入类型的属性的副本：
+```ts
+type ThreeStringProps = Record<"prop1" | "prop2" | "prop3", string>;
+```
+非同态的类型映射基本上都会新建一些属性名，值得注意的是 `keyof any` 表示任何类型的索引类型，换句话说，`keyof any` 相当于 `string | number | symbol`。
+
+## 类型映射的类型推断
+上面介绍了代理泛型，即类型 `Proxify<T>`，和相应的实现 `proxify`，简单来说就是将一个普通对象进行 `封装` 的操作，这个操作的逆操作就是 `解封` 对吧：
+```ts
+function unproxify<T>(t: Proxify<T>): T {
+  let result = {} as T;
+  for (const k in t) {
+    result[k] = t[k].get(); // 类型推断
+  }
+  return result;
+}
+
+let originalProps = unproxify(proxyProps);
+//  ^ = let originalProps: {
+//      rooms: number;
+//  }
+```
+上面代码发生 `类型推断` 的部分我进行了注明，要注意类型推导仅适用于 **同态** 映射，对于非同态的情况，需要开发者给解封函数一个显式的参数类型。
+
+## 条件类型
+
+条件类型：基于类型关系的判断，选择两个类型中的一个：
+```ts
+T extends U ? X : Y
+```
+上面表达式说明，当 `T` 可赋值给 `U` （即 `T` 是 `U` 的子类）时，就是 `X` ，反之为 `Y`。
+
+条件类型 `T extends U ? X : Y` 的类型要么是 `X` 要么是 `Y`，编译器根据是否有足够的类型信息判断返回的类型：
+
+```ts
+declare function f<T extends boolean>(x: T): T extends true ? string : number;
+
+// Type is 'string | number'
+let x = f(Math.random() < 0.5);
+//  ^ = let x: string | number
+```
+另一个例子是，根据类型参数 `T` 的不同，条件的判断返回类型：
+```ts
+type TypeName<T> = T extends string
+  ? "string"
+  : T extends number
+  ? "number"
+  : T extends boolean
+  ? "boolean"
+  : T extends undefined
+  ? "undefined"
+  : T extends Function
+  ? "function"
+  : "object";
+
+type T0 = TypeName<string>;
+//   ^ = type T0 = "string"
+type T1 = TypeName<"a">;
+//   ^ = type T1 = "string"
+type T2 = TypeName<true>;
+//   ^ = type T2 = "boolean"
+type T3 = TypeName<() => void>;
+//   ^ = type T3 = "function"
+type T4 = TypeName<string[]>;
+//   ^ = type T4 = "object"
+```
+有时候条件类型的返回类型是根据调用时的变量类型来决定的：
+```ts
+interface Foo {
+  propA: boolean;
+  propB: boolean;
+}
+
+declare function f<T>(x: T): T extends Foo ? string : number;
+
+function foo<U>(x: U) {
+  // Has type 'U extends Foo ? string : number'
+  let a = f(x);
+
+  // This assignment is allowed though!
+  let b: string | number = a;
+}
+```
+上面代码中 `a` 的类型取决于 `x` 的类型，对于这种悬而未决的情况，条件类型的类型可以赋给联合类型，两者是兼容的，就上面的 `b` 变量。
+
+## 分发条件类型
+
+我们把类型参数 `T` 是字面类型的条件类型成为**分发条件类型**，它可以将作为入参的联合类型自动解析计算，得到依然为联合类型的返回类型，例如一个条件类型 `T extends U ? X : Y` ，我们传入的 `T` 是 `A | B | C` 那么条件类型就会被解析为 `(A extends U ? X : Y) | (B extends U ? X : Y) | (C extends U ? X : Y)`。
+
+可以看看下面这些案例：
+
+```ts
+type T5 = TypeName<string | (() => void)>;
+//   ^ = type T5 = "string" | "function"
+
+type T6 = TypeName<string | string[] | undefined>;
+//   ^ = type T6 = "string" | "undefined" | "object"
+
+type T7 = TypeName<string[] | number[]>;
+//   ^ = type T7 = "object"
+```
+```ts
+type BoxedValue<T> = { value: T };
+type BoxedArray<T> = { array: T[] };
+type Boxed<T> = T extends any[] ? BoxedArray<T[number]> : BoxedValue<T>;
+
+type T1 = Boxed<string>;
+//   ^ = type T1 = {
+//       value: string;
+//   }
+type T2 = Boxed<number[]>;
+//   ^ = type T2 = {
+//       array: number[];
+//   }
+type T3 = Boxed<string | number[]>;
+//   ^ = type T3 = BoxedValue | BoxedArray
+```
+可以看到，当上面的 `T` 类型为 `any[]` 时（即数组），我们就可以用 `T[number]` 对其进行索引，这都归功于条件类型的作用。
+
+分发条件类型还可以对类型进行过滤操作：
+```ts
+// Remove types from T that are assignable to U
+type Diff<T, U> = T extends U ? never : T;
+// Remove types from T that are not assignable to U
+type Filter<T, U> = T extends U ? T : never;
+
+type T1 = Diff<"a" | "b" | "c" | "d", "a" | "c" | "f">;
+//   ^ = type T1 = "b" | "d"
+type T2 = Filter<"a" | "b" | "c" | "d", "a" | "c" | "f">; // "a" | "c"
+//   ^ = type T2 = "a" | "c"
+type T3 = Diff<string | number | (() => void), Function>; // string | number
+//   ^ = type T3 = string | number
+type T4 = Filter<string | number | (() => void), Function>; // () => void
+//   ^ = type T4 = () => void
+
+// Remove null and undefined from T
+type NotNullable<T> = Diff<T, null | undefined>;
+
+type T5 = NotNullable<string | number | undefined>;
+//   ^ = type T5 = string | number
+type T6 = NotNullable<string | string[] | null | undefined>;
+//   ^ = type T6 = string | string[]
+
+function f1<T>(x: T, y: NotNullable<T>) {
+  x = y; // ok, 因为 y 是 x 的子集，没问题
+  y = x; // error, 反过来不行
+}
+
+function f2<T extends string | undefined>(x: T, y: NotNullable<T>) {
+  x = y;
+  y = x; // error, 因为 x 可能为 undefined
+  let s1: string = x; // error, 因为 x 可能为 undefined
+  let s2: string = y; // ok，y 排除了 x 中的 undefined
+}
+```
+将条件类型和映射类型一同使用也很有用：
+```ts
+type FunctionPropertyNames<T> = {
+  [K in keyof T]: T[K] extends Function ? K : never;
+}[keyof T];
+type FunctionProperties<T> = Pick<T, FunctionPropertyNames<T>>;
+
+type NonFunctionPropertyNames<T> = {
+  [K in keyof T]: T[K] extends Function ? never : K;
+}[keyof T];
+type NonFunctionProperties<T> = Pick<T, NonFunctionPropertyNames<T>>;
+
+interface Part {
+  id: number;
+  name: string;
+  subparts: Part[];
+  updatePart(newName: string): void;
+}
+
+type T1 = FunctionPropertyNames<Part>;
+//   ^ = type T1 = "updatePart"
+type T2 = NonFunctionPropertyNames<Part>;
+//   ^ = type T2 = "id" | "name" | "subparts"
+type T3 = FunctionProperties<Part>;
+//   ^ = type T3 = {
+//       updatePart: (newName: string) => void;
+//   }
+type T4 = NonFunctionProperties<Part>;
+//   ^ = type T4 = {
+//       id: number;
+//       name: string;
+//       subparts: Part[];
+//   }
+```
+
+与联合类型和交叉类型一样，条件类型无法递归：
+```ts
+type ElementType<T> = T extends any[] ? ElementType<T[number]> : T; // 错误
+```
+
+## 条件类型的类型推断
+
+在条件类型的 `extends` 后面，现在可以通过 `infer` 声明来添加一个类型变量来进行类型推断，类型变量的类型可以在条件类型的 `true` 分支中引用，甚至可以多次 `infer` 推导同一个类型变量。
+
+下面的工具类型可以获取函数的返回类型：
+```ts
+type ReturnType<T> = T extends (...args: any[]) => infer R ? R : any;
+```
+
+在嵌套的条件类型中，多次使用 `infer` 推导 `U` 的类型：
+```ts
+type Unpacked<T> = T extends (infer U)[]
+  ? U
+  : T extends (...args: any[]) => infer U
+  ? U
+  : T extends Promise<infer U>
+  ? U
+  : T;
+
+type T0 = Unpacked<string>;
+//   ^ = type T0 = string
+type T1 = Unpacked<string[]>;
+//   ^ = type T1 = string
+type T2 = Unpacked<() => string>;
+//   ^ = type T2 = string
+type T3 = Unpacked<Promise<string>>;
+//   ^ = type T3 = string
+type T4 = Unpacked<Promise<string>[]>;
+//   ^ = type T4 = Promise
+type T5 = Unpacked<Unpacked<Promise<string>[]>>;
+//   ^ = type T5 = string
+```
+
+下面的例子展示了对同一个变量类型进行推导，当变量类型位于两个可交换的位置时，会合并为一个联合类型：
+```ts
+type Foo<T> = T extends { a: infer U; b: infer U } ? U : never; // a, b是 co-variant (协变，可交换的)
+
+type T1 = Foo<{ a: string; b: string }>;
+//   ^ = type T1 = string
+type T2 = Foo<{ a: string; b: number }>;
+//   ^ = type T2 = string | number
+```
+
+而不可交换（抗变）的情况，就会得到一个交叉类型：
+```ts
+type Bar<T> = T extends { a: (x: infer U) => void; b: (x: infer U) => void }
+  ? U
+  : never;
+
+type T1 = Bar<{ a: (x: string) => void; b: (x: string) => void }>;
+//   ^ = type T1 = string
+type T2 = Bar<{ a: (x: string) => void; b: (x: number) => void }>;
+//   ^ = type T2 = never
+```
+当推导含有多个调用签名的类型时（如函数重载），推导出的类型为各重载中覆盖情况最广的那个重载签名，类型推导难以逐个解析重载函数的参数：
+```ts
+declare function foo(x: string): number;
+declare function foo(x: number): string;
+declare function foo(x: string | number): string | number;
+
+type T1 = ReturnType<typeof foo>;
+//   ^ = type T1 = string | number
+```
+
+还有，无法在类型约束语句中使用 `infer` ：
+ ```ts
+ type ReturnedType<T extends (...args: any[]) => infer R> = R;
+// 'infer' declarations are only permitted in the 'extends' clause of a conditional type.
+// Cannot find name 'R'.
+ ```
+
+要想上面那样，需要这样写：
+```ts
+type AnyFunction = (...args: any[]) => any;
+type ReturnType<T extends AnyFunction> = T extends (...args: any[]) => infer R
+  ? R
+  : any;
+```
+
+## 预置的条件类型
+TypeScript 预先添加了一系列的条件类型，详情可见 [工具类型](/handbook_reference/工具类型.md)
